--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "connect-session-knex": "^2.1.0",
+    "connect-session-knex": "^2.1.1",
     "faker": "^5.5.3",
     "fastify-api": "^0.2.0",
-    "fastify-cookie": "^5.3.1",
-    "fastify-formbody": "^5.1.0",
+    "fastify-cookie": "^5.3.2",
+    "fastify-formbody": "^5.2.0",
     "fastify-multipart": "^5.1.0",
     "fastify-sensible": "^3.1.2",
     "fastify-session": "^5.2.1",
-    "fastify-vite": "^2.2.0-beta.25",
-    "fastify-vite-vue": "^2.2.0-beta.25",
-    "http-errors": "^1.8.0",
-    "knex": "^0.95.13",
-    "mysql2": "^2.3.2",
-    "objection": "^3.0.0-alpha.5"
+    "fastify-vite": "^2.2.3",
+    "fastify-vite-vue": "^2.2.3",
+    "http-errors": "^1.8.1",
+    "knex": "^0.95.14",
+    "mysql2": "^2.3.3",
+    "objection": "^3.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "fastify": "^3.22.1",
+    "fastify": "^3.24.0",
     "fastify-autoload": "^3.9.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   }
 }
