--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fastify-api": "^0.2.0",
     "fastify-cookie": "^5.4.0",
     "fastify-formbody": "^5.2.0",
-    "fastify-multipart": "^5.1.0",
+    "fastify-multipart": "^5.2.1",
     "fastify-sensible": "^3.1.2",
     "fastify-session": "^5.2.1",
     "fastify-vite": "^2.3.1",
@@ -27,16 +27,20 @@
     "http-errors": "^1.8.1",
     "knex": "^0.95.14",
     "mysql2": "^2.3.3",
-    "objection": "^3.0.0"
+    "objection": "^3.0.0",
+    "vite": "^2.7.1",
+    "vue": "^3.2.23",
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "fastify": "^3.24.0",
+    "fastify": "^3.24.1",
     "fastify-autoload": "^3.9.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.0"
   }
 }
