--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "test": "tap resources/test/test.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^6.0.0",
     "axios": "^0.27.2",
-    "connect-session-knex": "^2.1.1",
-    "faker": "^6.6.6",
+    "connect-session-knex": "^2.1.2",
+    "faker": "^5.5.3",
     "fastify-cookie": "^5.7.0",
     "fastify-formbody": "^5.3.0",
     "fastify-multipart": "^5.4.0",
