--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "test": "tap resources/test/test.js"
   },
   "dependencies": {
+    "@fastify/autoload": "^4.0.1",
     "@fastify/cookie": "^6.0.0",
+    "@fastify/formbody": "^7.0.0",
+    "@fastify/multipart": "^6.0.0",
+    "@fastify/sensible": "^4.1.0",
+    "@fastify/session": "^8.2.0",
     "axios": "^0.27.2",
     "connect-session-knex": "^2.1.2",
     "faker": "^5.5.3",
-    "fastify-cookie": "^5.7.0",
-    "fastify-formbody": "^5.3.0",
-    "fastify-multipart": "^5.4.0",
-    "fastify-sensible": "^3.2.0",
-    "fastify-session": "^5.2.1",
     "http-errors": "^2.0.0",
     "knex": "^2.0.0",
     "mysql2": "^2.3.3",
