--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "@fastify/session": "^8.2.0",
     "axios": "^0.27.2",
     "connect-session-knex": "^3.0.0",
-    "faker": "^5.5.3",
+    "faker": "^6.6.6",
     "http-errors": "^2.0.0",
     "knex": "^2.0.0",
     "mysql2": "^2.3.3",
     "objection": "^3.0.1",
-    "vite": "^2.9.8",
+    "vite": "^2.9.9",
     "vue": "^3.2.33",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@fastify/autoload": "^4.0.1",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
-    "fastify": "^3.29.0",
+    "fastify": "^4.0.0-rc.2",
     "nodemon": "^2.0.16",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
