--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "connect-session-knex": "^3.0.0",
     "faker": "^6.6.6",
     "http-errors": "^2.0.0",
+    "joi": "^17.6.0",
     "knex": "^2.0.0",
     "mysql2": "^2.3.3",
     "objection": "^3.0.1",
+    "pino": "^7.11.0",
     "vite": "^2.9.9",
-    "vue": "^3.2.34",
+    "vue": "^3.2.35",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
