--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fastify/cookie": "^7.0.0",
     "@fastify/formbody": "^7.0.1",
     "@fastify/multipart": "^7.0.0",
-    "@fastify/sensible": "^4.1.0",
+    "@fastify/sensible": "^5.0.0",
     "@fastify/session": "^9.0.0",
     "axios": "^0.27.2",
     "connect-session-knex": "^3.0.0",
@@ -39,7 +39,7 @@
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
-    "fastify": "^4.0.0-rc.5",
+    "fastify": "^4.0.0",
     "nodemon": "^2.0.16",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
