--- a/package.json
+++ b/package.json
@@ -6,42 +6,42 @@
   "scripts": {
     "migrate": "knex migrate:latest --knexfile ./database/knexfile.js ",
     "seed": "knex seed:run --knexfile database/knexfile.js",
-    "dev": "node server.mjs",
-    "watch": "nodemon server.mjs",
-    "build": "node server.mjs build",
-    "serve": "cross-env NODE_ENV=production node server.mjs",
+    "dev": "node main.mjs",
+    "watch": "nodemon main.mjs",
+    "build": "node main.mjs build",
+    "serve": "cross-env NODE_ENV=production node main.mjs",
     "debug": "node --inspect-brk server",
     "test": "tap resources/test/test.js"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "@fastify/formbody": "^7.3.0",
-    "@fastify/multipart": "^7.2.0",
+    "@fastify/multipart": "^7.3.0",
     "@fastify/sensible": "^5.1.1",
     "@fastify/session": "^10.0.2",
     "axios": "^1.1.3",
     "connect-session-knex": "^3.0.0",
     "faker": "^6.6.6",
     "http-errors": "^2.0.0",
-    "joi": "^17.6.3",
+    "joi": "^17.7.0",
     "knex": "^2.3.0",
     "mysql2": "^2.3.3",
     "objection": "^3.0.1",
     "pino": "^8.7.0",
-    "vite": "^3.1.8",
+    "vite": "^3.2.2",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
+    "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@fastify/autoload": "^5.4.1",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^3.2.2"
   }
 }
