--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fastify/sensible": "^5.1.1",
     "@fastify/session": "^10.0.2",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "connect-session-knex": "^3.0.0",
     "faker": "^6.6.6",
     "http-errors": "^2.0.0",
