app:enviroment update

--- a/env.example
+++ b/env.example
@@ -1,13 +1,32 @@
 # APP SETTING
-APP_PORT = 
-APP_ENV=development
+APP_HOST = 'localhost'
+APP_PORT = 3000
+APP_ENV='development'
+APP_NAME='fastify-api'
+APP_URL='http://localhost:3000'
+
+# TOKEN SETTING
+
 
 # DATABASE SETTING
-DB_HOST=127.0.0.1
+DB_HOST='127.0.0.1'
 DB_PORT=3306
-DB_USER=root
+DB_USER='root'
 DB_PASSWORD=
-DB_NAME=
+DB_NAME='fastify_api'
+DB_CHARSET = 'utf8'
 
-#SESSION SETTING
+# SESSION SETTING
 SESSION_SECRET=
+
+# EMAIL SERVICE SETTING
+MAILGUN_API_KEY = '---'
+MAILGUN_DOMAIN = '---.mailgun.org'
+MAILGUN_HOST = 'api.mailgun.net'
+EMAIL_FROM = 'dshule  <support@dshule.com>'
+EMAIL_TO_TEST = 'test-dshule@gmail.com'
+
+# S3 SETTING
+S3_ACCESS = 
+S3_SECRET = 
+S3_BUCKET = 'my-bucket-name'
