app:base action

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "author": "Bussury A.Omary",
   "scripts": {
-    "migrate": "knex migrate:latest --knexfile ./database/knexfile.js ",
-    "seed": "knex seed:run --knexfile database/knexfile.js",
+    "migrate": "knex migrate:latest --knexfile ./database/knexfile.dev.js ",
+    "seed": "knex seed:run --knexfile database/knexfile.dev.js",
     "dev": "node main.mjs",
     "watch": "nodemon main.mjs",
     "build": "node main.mjs build",
