--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "@fastify/formbody": "^7.4.0",
+    "@fastify/jwt": "^7.0.0",
     "@fastify/multipart": "^7.6.1",
     "@fastify/sensible": "^5.2.0",
     "@fastify/session": "^10.3.0",
@@ -25,7 +26,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.9.2",
     "knex": "^2.4.2",
-    "mysql2": "^3.3.5",
+    "mysql2": "^3.4.0",
     "objection": "^3.0.1",
     "pino": "^8.14.1",
     "vite": "^4.3.9",
