--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "author": "Bussury A.Omary",
   "scripts": {
-    "migrate": "knex migrate:latest --knexfile ./database/knexfile.dev.js ",
-    "seed": "knex seed:run --knexfile database/knexfile.dev.js",
-    "dev": "node main.mjs",
+    "migrate": "knex migrate:latest --knexfile database/knexfile.js ",
+    "seed": "knex seed:run --knexfile database/knexfile.js",
+    "dev": "node  main.mjs",
     "watch": "nodemon main.mjs",
     "build": "node main.mjs build",
     "serve": "cross-env NODE_ENV=production node main.mjs",
@@ -19,22 +19,22 @@
     "@fastify/jwt": "^7.2.4",
     "@fastify/multipart": "^8.0.0",
     "@fastify/sensible": "^5.5.0",
-    "@fastify/session": "^10.5.0",
-    "axios": "^1.6.2",
+    "@fastify/session": "^10.7.0",
+    "axios": "^1.6.4",
     "bcrypt": "^5.1.1",
     "connect-session-knex": "^4.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
-    "knex": "^3.0.1",
+    "knex": "^3.1.0",
     "mysql2": "^3.6.5",
-    "objection": "^3.1.2",
-    "pino": "^8.16.2"
+    "objection": "^3.1.3",
+    "pino": "^8.17.2"
   },
   "devDependencies": {
     "@fastify/autoload": "^5.8.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "fastify": "^4.24.3",
-    "nodemon": "^3.0.1"
+    "fastify": "^4.25.2",
+    "nodemon": "^3.0.2"
   }
 }
