--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "connect-session-knex": "^5.0.0",
+    "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "knex": "^3.1.0",
-    "mysql2": "^3.10.1",
+    "mysql2": "^3.10.2",
     "objection": "^3.1.4",
-    "pino": "^9.2.0"
+    "pino": "^9.3.1"
   },
   "devDependencies": {
     "@fastify/autoload": "^5.10.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.28.0",
+    "fastify": "^4.28.1",
     "nodemon": "^3.1.4"
   }
 }
